--- a/style.css
+++ b/style.css
@@ -1,13 +1,26 @@
 @charset "UTF-8";
 
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
     min-width: 100vh;
     background-color: darkgray;
+    font-family: var(--font1);
 }
 
 header {
@@ -19,6 +32,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 10vw;
 }
 
 header > p {
@@ -37,10 +52,10 @@ header a:hover, footer a:hover {
 }
 
 section {
-    padding-top: 10vh;
-    padding-bottom: 10vh;
+    padding: 10vh 0vh 10vh 30px;
     line-height: 2em;
-    padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 5vw;
 }
 
 section.normal {
@@ -54,7 +69,9 @@ section.imagem {
 }
 
 section.imagem > p {
-  width: 500px;
+    /*Transorma em caixa que tem o seu conteúdo adaptado */
+  display: inline-block;
+  padding: 5px;
   background-color: rgba(0, 0, 0, 0.23);
 }
 
