--- a/style/style.css
+++ b/style/style.css
@@ -52,10 +52,16 @@ header a:hover, footer a:hover {
 }
 
 section {
-    padding: 10vh 0vh 10vh 30px;
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 30px;
     line-height: 2em;
     font-family: var(--font3);
-    font-size: 5vw;
+    font-size: 2vw;
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -63,9 +69,13 @@ section.normal {
     color: black;
 }
 
+/* Genérica */
 section.imagem {
     background-color: rgb(65, 64, 64);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.492);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
@@ -73,6 +83,16 @@ section.imagem > p {
   display: inline-block;
   padding: 5px;
   background-color: rgba(0, 0, 0, 0.23);
+  text-shadow: 1px 1px 0px black;
+}
+
+section.imagem#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img02{
+    background-image: url('../imagens/background002.jpg');
 }
 
 footer {
